--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -1,13 +1,27 @@
 {% extends 'base.html' %}
 {% block title %}{{ user.fname }}'s Profile Page{% endblock %}
 {% block content %}
+<!-- <div id="profile-nav" class="navbar navbar-inverse navbar-fixed-left">
+  <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
+		<li class="side-nav-category">
+			Enrolled
+		</li>
+		<li class="side-nav-category">
+			Favorites
+		</li>
+		<li class="side-nav-category">
+			Past Courses
+		</li>
+  </ul>
+</div> -->
 	<div class="profile-div">
 		<h3 class="welcome-note">Hi {{ user.fname }}! Welcome to ClassAmass!
 			<a href="/">Start searching for classes</a>
 		</h3>
+		<button type="button" id="enrolled-heading" class="btn btn-primary class-heading btn-xl">Currently Enrolled</button><br><br>
 		{% if enrolled_courses %}
 		<div id="enrolled">
-			<h3 id="enrolled-heading" class="class-heading">Currently Enrolled:</h3><br>
+			<!-- <button type="button" id="enrolled-heading" class="btn btn-default class-heading btn-xl">Currently Enrolled:</button><br> -->
 			{% for course in enrolled_courses %}
 			<div id="{{ course.course_id }}">
 				<div id ="coursediv-{{ course.course_id }}" class="media well profile">
@@ -16,18 +30,25 @@
 	      					<img class="media-object" src="{{ course.picture }}" alt="course pic">
 	    				</a>
 	  				</div>
-	  				<div class="media-body">
+	  				<div id="add-here-{{ course.course_id }}" class="media-body">
 	    				<h4 class="media-heading">{{ course.title }}</h4>
 						<button type="button" class="btn btn-danger btn-xs unenroll" data-course-id="{{ course.course_id }}">Remove</button>
-						<button type="button" class="btn btn-danger btn-xs move-to-completed-course" data-course-id="{{ course.course_id }}">Finished</button>
+						<button type="button" class="btn btn-danger btn-xs completed-button" data-course-id="{{ course.course_id }}">Completed</button>
 					</div>
 				</div>
 			</div>
 			{% endfor %}
-		</div>		
+		</div>
+	{% else %}
+	<div id="enrolled">
+		<h4 class="no-prof-courses-note">You are currently not enrolled in any courses.</h4>
+	</div>		
 	{% endif %}
-	{% if fav_courses %}		
-		<h3 id="fav-heading" class="class-heading">Favorites:</h3><br>
+	<div id="unenroll-msg"></div>
+	<button type="button" id="favorite-heading" class="btn btn-primary class-heading btn-xl">Favorites</button><br><br>
+	{% if fav_courses %}
+		<div id="favorite">		
+		<!-- <h3 id="fav-heading" class="class-heading">Favorites:</h3><br> -->
 		{% for course in fav_courses %}
 		<div id="{{ course.course_id }}" class="course-div">
 			<div id ="course-{{ course.course_id }}" class="media well profile">
@@ -39,16 +60,23 @@
   				<div id="add-here-{{ course.course_id }}" class="media-body">
     				<h4 class="media-heading">{{ course.title }}</h4>
 					<button type="button" class="btn btn-success btn-xs taken-button" data-course-id="{{ course.course_id }}">Completed</button>
+					<button type="button" class="btn btn-danger btn-xs enrolled-button" data-course-id="{{ course.course_id }}">Enrolled</button>
 					<button type="button" class="btn btn-danger btn-xs unfavorite-button" data-course-id="{{ course.course_id }}">Unfavorite</button>
 				</div>
 			</div>
 		</div>
-		{% endfor %}		
+		{% endfor %}
+		</div>
+	{% else %}
+		<div id="favorite">
+			<h4 class="no-prof-courses-note">You have no favorite courses.</h4>
+		</div>			
 	{% endif %}
-	<span id="unfav-msg"></span>
+	<div id="unfav-msg"></div>
+	<button type="button" id="taken-heading" class="btn btn-primary class-heading btn-xl">Past Courses</button><br><br>
 	{% if taken_courses %}
 		<div id="taken">
-			<h3 id="taken-heading" class="class-heading">Completed:</h3><br>
+			<!-- <h3 id="taken-heading" class="class-heading">Past Courses:</h3><br> -->
 			{% for course in taken_courses %}
 			<div id="{{ course.course_id }}">
 				<div id ="coursediv-{{ course.course_id }}" class="media well profile">
@@ -64,9 +92,13 @@
 				</div>
 			</div>
 			{% endfor %}
-		</div>		
+		</div>
+	{% else %}
+		<div id="taken">
+			<h4 class="no-prof-courses-note">You have not completed any courses.</h4>
+		</div>			
 	{% endif %}
-	<span id="untaken-msg"></span>
+	<div id="untaken-msg"></div>
 	</div>
 	<script src="/static/unfavorite.js"></script>
 {% endblock %}
