--- a/static/styles.css
+++ b/static/styles.css
@@ -3,14 +3,20 @@ body {
 	background-attachment: fixed;
 }
 
+.flash-msg {
+	margin-top: 51px;
+	margin-right: 900px;
+}
+
 .homepage-div {
-	margin-top: 200px;
+	margin-top: 275px;
 	text-align: center;
 }
 
 #search-box{
 	height: 40px;
 	width: 250px;
+	font-size: 23px;
 }
 
 #search-button{
@@ -37,11 +43,33 @@ body {
 #form-div {
 	color: white;
 	padding-bottom: 100px;
-/*	font-size: 15px;*/
+	font-size: 14px;
 	padding-left: 10px;
 	padding-right: 10px;
 	padding-top: 10px;
 
+}
+
+.filter-cat {
+	font-size: 16px;
+}
+
+#search-phrase {
+	width: 90%;
+	height: 40%
+}
+
+#price {
+	width: 90%;
+	height: 40%
+}
+
+.currencyinput {
+    border: 1px inset #ccc;
+}
+
+.currencyinput input {
+    border: 0;
 }
 
 #show-lang {
@@ -52,7 +80,7 @@ body {
 
 #show-uni {
 	padding: 2px; 
-	color: black;
+	color: white;
 	margin-top: 0;
 }
 
@@ -80,6 +108,7 @@ body {
 .welcome-note {
 	text-align: center;
 	margin-top: 60px;
+	margin-bottom: 60px;
 }
 .class-heading {
 	margin-left: 50px;
@@ -116,25 +145,9 @@ body {
 	color: black;
 }
 
-#search-phrase {
-	width: 90%;
-}
-
-#price {
-	width: 25%;
-}
-
 #sorry-none {
 	margin-top: 60px;
 	text-align: center;
-}
-
-.side-nav-category {
-	font-size: 14px;
-}
-
-li + input {
-	font-size: 12px;
 }
 
 #course-url {
@@ -161,14 +174,49 @@ li + input {
 }
 
 #login-div {
-	text-align: center;
-	margin-top: 200px;
+	margin-left: 400px;
+	margin-top: 100px;
+	margin-right: 600px;
+	border-style: solid;
+	padding: 30px;
+	border-width: 1px;
 }
 
+.form-signin {
+	margin-top: 150px;
+	margin-right: 850px;
+	margin-left: 80px;
+}
+
+.form-signin-heading {
+	margin-bottom: 15px;
+}
+
+.login-input {
+	margin-bottom: 15px;
+	height: 50px;
+}
+
+#password {
+	margin-right: 28px;
+	height: 40px;
+	padding: 10px; 
+}
+
+#email {
+	margin-right: 28px;
+	height: 40px;
+	padding: 10px; 
+}
+
+#login-submit {
+	margin-top: 30px;
+}
+/*
 #register-div {
 	text-align: center;
 	margin-top: 200px;
-}
+}*/
 
 .well {
 	margin-left: 100px;
@@ -181,4 +229,16 @@ li + input {
 
 .no-prof-courses-note {
 	text-align: center;
+}
+
+#unfav-msg {
+	margin-left: 50px;
+}
+
+#untaken-msg {
+	margin-left: 50px;
+}
+
+#unenroll-msg {
+	margin-left: 50px;
 }
