--- a/templates/search.html
+++ b/templates/search.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}ClassAmass Search Results{% endblock %}
 {% block content %}
-<div class="navbar navbar-inverse navbar-fixed-left">
+<div class="navbar navbar-inverse navbar-fixed-left" style="margin-top: -10px">
   <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="205">
     <div id="form-div">
 	<form action='/search/filters/fake' id="filters-form">
