Added more tests for flask server routes and db queries; changed fonts; added accent color; small aesthetic changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 	<title>{% block title %}ClassAmass{% endblock %}</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lobster|Oxygen" rel="stylesheet">
 	<link rel="stylesheet" href="/static/styles.css">
 	<script src="https://code.jquery.com/jquery.js"></script>
 </head>
@@ -11,7 +12,7 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
   	<div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">ClassAmass</a>
+      <a class="navbar-brand" style="color: rgb(218, 77, 87); font-size: 30px" href="/">ClassAmass</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="/">Home</a></li>
