--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 	<h1>What do you want to learn about?</h1>
 	<form action='/search'>
 		<input id="search-box" type="text" name="search" required></input>
-		<input id="search-button" type="submit" value="Find a class!"></input>
+		<button id="search-button" class="btn" type="submit" value="Find a class!">Find a class!</button>
 	</form>
 <!-- 	<form action='/browse'>
 		<input type="submit" value="Browse all courses"></input>
