--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,22 @@
 body {
 	background: url("/static/books-484766_1920.jpg");
 	background-attachment: fixed;
+	font-family: 'Oxygen', sans-serif;
+}
+
+.navbar-brand {
+	font-family: 'Lobster', cursive;
+}	
+
+a .navbar-brand {
+	color: rgb(218, 77, 87);
+}
+
+
+.brand {
+	font-family: 'Lobster', cursive;
+	font-size: 25px;
+	color: rgb(218, 77, 87);
 }
 
 .flash-msg {
@@ -13,7 +29,18 @@ body {
 	text-align: center;
 }
 
+.btn {
+	background: rgb(218, 77, 87);
+	color: white;
+}
+
+.btn:hover {
+	background: rgb(168, 37, 34);
+	color: white;
+}
+
 #search-box{
+	vertical-align: bottom;
 	height: 40px;
 	width: 250px;
 	font-size: 23px;
@@ -21,12 +48,13 @@ body {
 
 #search-button{
 	height: 40px;
-	font-size: 17px;
+	font-size: 20px;
 }
 
 .navbar-fixed-top {
 	margin-bottom: 0;
 	padding-bottom: 0;
+	opacity: 0.9;
 }
 
 .navbar-fixed-left {
@@ -43,7 +71,7 @@ body {
 #form-div {
 	color: white;
 	padding-bottom: 100px;
-	font-size: 14px;
+	font-size: 13px;
 	padding-left: 10px;
 	padding-right: 10px;
 	padding-top: 10px;
@@ -51,17 +79,17 @@ body {
 }
 
 .filter-cat {
-	font-size: 16px;
+	font-size: 15px;
 }
 
 #search-phrase {
 	width: 90%;
-	height: 40%
+	/*height: 100%*/
 }
 
 #price {
 	width: 90%;
-	height: 40%
+	/*height: 10%*/
 }
 
 .currencyinput {
@@ -72,21 +100,30 @@ body {
     border: 0;
 }
 
+.input-group-addon {
+	vertical-align: bottom;
+}
+
+
+.show-more {
+	background: #222222;
+	border-color: rgb(170, 180, 193);
+}
+
+.show-more:hover {
+	background: #222222;
+}
+
 #show-lang {
 	padding: 2px; 
 	color: white;
-	margin-top: 0;
+	margin-top: -20px;
 }
 
 #show-uni {
 	padding: 2px; 
 	color: white;
-	margin-top: 0;
-}
-
-
-#filters {
-	color: black;
+	margin-top: -20px;
 }
 
 #result-number {
@@ -129,8 +166,8 @@ body {
 }
 
 .media-object {
-	height: 75px;
-	width: 100px;
+	height: 100px;
+	width: 125px;
 }
 
 .media {
@@ -160,6 +197,14 @@ body {
 {
      color: inherit; 
      text-decoration: none; 
+}
+
+#start-searching {
+	color: inherit;
+}
+
+#start-searching:hover {
+	text-decoration: none; 
 }
 
 #course-url:visited 
