Fixed testdb; fixed buttons in filtered results; added link to picture in filtered results

--- a/templates/search.html
+++ b/templates/search.html
@@ -175,7 +175,7 @@
 			<span class="filter-cat">SOURCE</span><br>
 			<input type="checkbox" name="source" value="Coursera">
 				Coursera
-			</input>
+			</input><br>
 			<input type="checkbox" name="source" value="Udemy">
 				Udemy
 			</input></li>
