--- a/templates/search.html
+++ b/templates/search.html
@@ -7,7 +7,7 @@
 	<form action='/search/filters/fake' id="filters-form">
 		<li class="side-nav-category">
 			<span class="filter-cat">SEARCH</span> 
-			<input type="text" id="search" class="input-sm side-nav-input-text text form-control" name="search-phrase" value="{{ phrase }}">
+			<input type="text" id="search" class="input-sm side-nav-input-text text form-control" name="search" value="{{ phrase }}">
 			</input>
 		</li>
 		<li class="divider"></li><br>
